src/index.css
/* ... */
#teams-list button, #entries-list button {
    padding: 0;
    width: 1em;
    height: 1em;
    z-index: 3;
    align-self: center;
}

#teams-list button svg, #entries-list button svg {
    width: 0.8em;
    height: 0.8em;
    display: block;
    margin: auto;
}

.teams-list-row-bg {
    transition: background-color 0.25s ease;
    z-index: 2;
}

.teams-list-row-bg:nth-child(odd of .teams-list-row-bg) {
    background-color: color-mix(in srgb, var(--color) 5%, transparent);
}

.teams-list-row-bg:hover, #teams-list button:hover + .teams-list-row-bg,
.teams-list-row-bg:focus {
    outline: none;
    background-color: color-mix(in srgb, var(--color) 30%, transparent) !important;
    transition: background-color 0.02s ease;
}

.teams-button-row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    gap: 0.2em;
}

#teams-remove-data {
    border: 0.05em solid color-mix(in srgb, #f00, var(--bg) 30%);
    --gr-color-1: color-mix(in srgb, #f00, var(--bg) 60%);
    --gr-color-2: color-mix(in srgb, #f00, var(--bg) 80%);
    --gr-pc: 0%;
    background: linear-gradient(to right, var(--gr-color-1) 0% var(--gr-pc), var(--gr-color-2) var(--gr-pc) 100%);
}

#entries-list {
    flex-grow: 1;
    overflow-y: scroll;
    width: min(80dvw, 80ch);
    display: grid;
    grid-template-columns: min-content minmax(10ch, 1fr) 2fr 2fr max-content;
    align-content: start;
}

#entries-list.no-entries {
    grid-template-rows: auto;
    place-content: center;
}

#entries-list.no-entries p {
    font-style: italic;
    color: color-mix(in srgb, var(--bg), var(--color) 60%);
    grid-row: 1;
    grid-column: 1 / -1;
}

#view-stands-sec-driving p, #view-pits-sec-robot p {
    border: 0.05em solid var(--color);
    border-radius: 0.3em;
    background-color: color-mix(in srgb, var(--color) 10%, var(--bg));
    padding: 0.3em 0.5em;
    box-sizing: border-box;
    white-space: pre-wrap;
    width: 100%;
    min-height: 2em;
    margin: 0;
}

.view-checkbox::before {
    content: "⬜ ";
}

.view-checkbox[data-checked=true]::before {
    content: "☑ ";
}

.view-section p {
    margin: 0;
    margin-block-start: 0.2em;
}

.view-section p:first-child {
    margin-block-start: 0;
}

.view-input {
    min-width: 7ch;
    width: min-content;
}

#view-pits-will-change-at {
    min-width: 18ch;
    display: inline-block;
    height: 1em;
    vertical-align: middle;
}

#panel-scout-stands, #panel-scout-pits, #panel-view-stands, #panel-view-pits {
    display: grid;
    grid-template-columns: 30ch 30ch;
    padding: 0.8em 0;
    align-content: start;
    justify-items: center;
    overflow-y: scroll;
    overflow-x: hidden;
    align-items: start;
    grid-auto-rows: min-content;
    gap: 0;
}

@media (max-width: 80ch) {
    #panel-scout-stands, #panel-scout-pits {
        grid-template-columns: 30ch;
    }
    .scout-section {
        grid-area: auto !important; /* override inline styles set by DIY masonry; easier to do this than unset them in script */
    }
}

.scout-section, .view-section {
    padding: 1em;
    box-sizing: border-box;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: stretch;
    gap: 0.15em;
}

.scout-section h2, .view-section h2 {
    margin-block-start: 0;
    margin-block-end: 0.25em;
}

#scout-stands-team-info, #scout-pits-team-info,
#scout-stands-footer, #scout-pits-footer,
#view-stands-team-info, #view-pits-team-info,
#view-stands-footer, #view-pits-footer {
    grid-column: 1 / -1;
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    text-align: center;
}

#scout-stands-team-number, #scout-pits-team-number {
    font-size: 1.2em;
}

#scout-stands-team-name, #scout-pits-team-name {
    font-size: 2em;
    padding-bottom: 1em;
    padding-left: 2em;
    padding-right: 2em;
    margin-bottom: -1em;
    border-bottom: 2px solid var(--color);
}

#scout-stands-team-location, #scout-pits-team-location {
    font-size: 0.75em;
}

#scout-stands-back, #scout-pits-back {
    margin-top: 1.5em;
}

.scout-row, .view-row {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    flex-wrap: wrap;
}

.scout-row input:not([type=number]):not([type=checkbox]):not([type=range]) {
    flex-grow: 1;
}

.scout-checkboxes-row, .view-checkboxes-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: stretch;
    flex-wrap: wrap;
    gap: 0.1em;
}

.scout-checkboxes-row > div, .view-checkboxes-row > div {
    margin-inline: 0.4em;
}

#panel-scout-stands textarea, #panel-scout-pits textarea {
    width: 100%;
    resize: none;
    height: 4em;
}

#scout-pits-save, #view-pits-back-2 {
    margin-block-start: 0.5em;
}

.import-csv-bin {
    position: absolute;
    transition: top 0.2s ease-out, left 0.2s ease-out;
    width: 200px;
    height: 100px;
    pointer-events: none;
}

#import-qr-reader, #import-config-reader {
    width: 100%;
}

#import-qr-reader video, #import-config-reader video {
    width: 100% !important;
}

#panel-export-qr, #panel-export-configuration {
    padding: 0.5em 2em;
    text-align: center;
}

#export-qr-images, #export-config-images {
    flex-grow: 1;
    overflow: scroll;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: center;
    gap: 0.2em;
}

#export-qr-images img, #export-config-images img {
    image-rendering: pixelated;
    height: auto;
    width: auto;
    max-height: auto;
}

#export-config-images.unpixelated img {
    image-rendering: auto;
}

#panel-export-qr h3, #panel-export-qr p,
#panel-export-configuration h3, #panel-export-configuration p {
    margin: 0;
    max-width: 60ch;
}

@media print {
    #panel-export-qr > :not(#export-qr-images),
    #panel-export-configuration > :not(#export-config-images) {
        display: none;
    }
}

